# darma-serialization

./: .travis.yml  CMakeLists.txt
cmake/: DarmaSerializationConfig.cmake.in
cmake/modules/: FindSphinx.cmake
docs/: conf.py.in  index.rst.in
examples/: CMakeLists.txt
examples/copy_constructor_archive/: copy_constructor_archive.cc
examples/moving_data/: moving_data.cc
source/include/darma/serialization/: archive_concept.h  operator_overloads.h  pointer_reference_archive.h  serialization_buffer.h  simple_archive.h  simple_handler.h
source/include/darma/serialization/adapters/: adapter_access.h
source/include/darma/serialization/handlers/: handler_concept.h
tests/: CMakeLists.txt
